--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ wheels/
 
 # Virtual environments
 .venv
-Seat_belt_detection-2/
+dataset/Seat_belt_detection-2/test/*
+dataset/Seat_belt_detection-2/train/*
+
+
 runs/
 *.pt
